[gd_scene load_steps=3 format=3 uid="uid://c7hcmum24vrny"]

[ext_resource type="Script" uid="uid://cbl7ir8qic2kc" path="res://Scripts/main_menu.gd" id="1_xr64c"]
[ext_resource type="Texture2D" uid="uid://cgteokhcuioow" path="res://Assets/logo.png" id="2_aswaa"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xr64c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 20.0
offset_right = 44.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play Game"

[node name="LevelPicker" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Level Picker"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Logo" type="Sprite2D" parent="VBoxContainer"]
position = Vector2(50, -97)
scale = Vector2(0.239882, 0.214685)
texture = ExtResource("2_aswaa")

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LevelPicker" to="." method="_on_level_picker_pressed"]
